--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,10 @@
             <id>spigot-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
+        <repository>
+            <id>codemc-releases</id>
+            <url>https://repo.codemc.io/repository/maven-releases/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -40,6 +44,12 @@
             <groupId>com.projectkorra</groupId>
             <artifactId>projectkorra</artifactId>
             <version>1.12.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.retrooper</groupId>
+            <artifactId>packetevents-spigot</artifactId>
+            <version>2.8.0</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
