--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,7 @@ name: ${plugin.name}
 version: ${plugin.version}
 description: ${plugin.description}
 author: ${plugin.author}
+website: https://github.com/Manu585/CisCov
 api-version: 1.20
 depend:
   - ProjectKorra
